# SoloFounder

./: .env.example  .gitignore  AUDIT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml  deploy.yml  neon-migrate.yml
app/: __init__.py  main.py  ui_embed.py
app/ai/: __init__.py  anthropic_provider.py  openai_provider.py  provider.py
app/api/: dependencies.py
app/core/: __init__.py  config.py  lifespan.py  logging.py  metrics.py  middleware.py  migrations.py  rate_limiter.py  security.py
app/repositories/: __init__.py  ai_generation_repo.py  business_repo.py  factory.py  models.py  postgres.py  skill_run_repo.py  workflow_run_repo.py
app/schemas/: __init__.py  business.py
app/services/: dashboard_service.py  entity_creation_service.py  skill_runner.py  workflow_runner.py
app/skills/: __init__.py  content_to_product.py  crm_deal_coach.py  customer_persona.py  delivery_project.py  executor.py  founder_profile_diagnosis.py  guardrails.py  landing_page.py  proposal.py  (+7 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: apply_neon_migrations.sh  embed_ui.py
tests/: conftest.py  test_anthropic_provider.py  test_api_security.py  test_config.py  test_cors.py  test_crud_api.py  test_jwt_auth.py  test_middleware.py  test_migrations.py  test_openai_provider.py  test_postgres_business_repo.py  test_rate_limiter.py  test_skills.py  test_skills_api.py  test_spa_fallback.py  test_workflows.py
(+66 files in other folders)
